Custom--app/main/default/objects/File_Storage_Record__c/File_Storage_Record__c.object-meta.xml
<CustomObject>
    <description>This holds metadata about files that are uploaded into
		external systems (Box/S3/StructuredFN)</description>
    <label>File Storage Record</label>
    <nameField>
        <displayFormat>FSR-{00000}</displayFormat>
        <label>File Storage Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Storage Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>