Custom--app/main/default/objects/File_Storage_Record__c/fields/Box_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_File_Id__c</fullName>
    <externalId>true</externalId>
    <label>Box File Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>