Custom--app/main/default/objects/File_Storage_Record__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>File Storage Records</relationshipLabel>
    <relationshipName>File_Storage_Records</relationshipName>
    <type>Lookup</type>
</CustomField>