Custom--app/main/default/objects/File_Storage_Record__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>