Custom--app/main/default/objects/File_Storage_Record__c/fields/File_Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>File_Size_Bytes__c</fullName>
    <label>File Size (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>