Custom--app/main/default/objects/File_Storage_Record__c/fields/File_Size_kb__c.field-meta.xml
<CustomField>
    <fullName>File_Size_kb__c</fullName>
    <formula>(File_Size_Bytes__c /1024)</formula>
    <label>File Size (kb)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>