Custom--app/main/default/objects/File_Storage_Record__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <description>Corresponds to which folder the document belongs,not  "Content Type" as in PDF or Text or Doc</description>
    <label>File Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>