Custom--app/main/default/objects/File_Storage_Record__c/fields/FSR_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>FSR_Property_Code__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Property__c)), 
Property__r.Property_Code__c, 
IF( 
AND( 
NOT(ISBLANK(Rehab__c)), 
NOT(ISBLANK(Rehab__r.Portfolio__c )) 
), 
Rehab__r.Portfolio__r.Property_Code__c, 
IF( 
AND( 
NOT(ISBLANK(HD_Budget_Walk__c)), 
NOT(ISBLANK(HD_Budget_Walk__r.Rehab__c )), 
NOT(ISBLANK(HD_Budget_Walk__r.Rehab__r.Portfolio__c )) 
), 
HD_Budget_Walk__r.Rehab__r.Portfolio__r.Property_Code__c, 
'' 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSR Property Code</label>
    <type>Text</type>
</CustomField>