Custom--app/main/default/objects/File_Storage_Record__c/fields/HD_Budget_Walk__c.field-meta.xml
<CustomField>
    <fullName>HD_Budget_Walk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HD Budget Walk</label>
    <referenceTo>HD_Budget_Walk__c</referenceTo>
    <relationshipLabel>File Storage Records</relationshipLabel>
    <relationshipName>File_Storage_Records</relationshipName>
    <type>Lookup</type>
</CustomField>