Custom--app/main/default/objects/File_Storage_Record__c/fields/Last_Export_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Export_Date__c</fullName>
    <label>Last Export Date</label>
    <type>Date</type>
</CustomField>