Custom--app/main/default/objects/File_Storage_Record__c/fields/Linked_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Linked_Record_Id__c</fullName>
    <description>Modify this formula every time a new relationship with an object is created.</description>
    <formula>HD_Budget_Walk__c +  Property__c + Rehab__c + Residence__c + Disposition__c</formula>
    <label>Linked Record Id</label>
    <type>Text</type>
</CustomField>