Custom--app/main/default/objects/File_Storage_Record__c/fields/Naming_convention_met__c.field-meta.xml
<CustomField>
    <fullName>Naming_convention_met__c</fullName>
    <formula>IF (Property__r.Property_Code__c =  LEFT(File_Name__c, 8) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Naming convention met?</label>
    <type>Checkbox</type>
</CustomField>