Custom--app/main/default/objects/File_Storage_Record__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>File Storage Records</relationshipLabel>
    <relationshipName>File_Storage_Records</relationshipName>
    <type>Lookup</type>
</CustomField>