Custom--app/main/default/objects/File_Storage_Record__c/fields/Record_ID_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record ID ( 18 Digit )</label>
    <type>Text</type>
</CustomField>