Custom--app/main/default/objects/File_Storage_Record__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(
	NOT(ISBLANK(Property__c )),
	TEXT(Property__r.Region__c),
	IF(
		NOT(ISBLANK( Rehab__c )),
		Rehab__r.Region__c,
		IF(
			NOT(ISBLANK(HD_Budget_Walk__c)),
			HD_Budget_Walk__r.Region__c,
			""
		)	
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market2</label>
    <type>Text</type>
</CustomField>