Custom--app/main/default/objects/File_Storage_Record__c/fields/Rehab__c.field-meta.xml
<CustomField>
    <fullName>Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rehab</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>File Storage Records</relationshipLabel>
    <relationshipName>File_Storage_Records</relationshipName>
    <type>Lookup</type>
</CustomField>