Custom--app/main/default/objects/File_Storage_Record__c/fields/S3_Path_Name__c.field-meta.xml
<CustomField>
    <fullName>S3_Path_Name__c</fullName>
    <description>Full Path of the S3 file--Includes file name</description>
    <externalId>true</externalId>
    <label>S3 Path Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>