Custom--app/main/default/objects/File_Storage_Record__c/fields/SFN_Upload_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>SFN_Upload_Error_Message__c</fullName>
    <inlineHelpText>Clear this field to re-push a record to SFN.</inlineHelpText>
    <label>SFN Upload Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>