Custom--app/main/default/objects/File_Storage_Record__c/fields/SFN_Upload_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>SFN_Upload_Last_Attempt__c</fullName>
    <inlineHelpText>Clear this field to re-push a record to SFN.</inlineHelpText>
    <label>SFN Upload Last Attempt</label>
    <type>DateTime</type>
</CustomField>