Custom--app/main/default/objects/File_Storage_Record__c/fields/SFN_Upload_Queued__c.field-meta.xml
<CustomField>
    <fullName>SFN_Upload_Queued__c</fullName>
    <label>SFN Upload Queued</label>
    <type>DateTime</type>
</CustomField>