Custom--app/main/default/objects/File_Storage_Record__c/fields/Uploaded_To_Box_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_To_Box_By__c</fullName>
    <label>Uploaded To Box By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>