Custom--app/main/default/objects/File_Storage_Record__c/fields/Uploaded_To_S3_By__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_To_S3_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded To S3 By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Storage_Records</relationshipName>
    <type>Lookup</type>
</CustomField>