Custom--app/main/default/objects/File_Storage_Record__c/fields/Uploaded_To_SFN_Date__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_To_SFN_Date__c</fullName>
    <label>Uploaded To SFN Date</label>
    <type>DateTime</type>
</CustomField>