Custom--app/main/default/objects/File_Storage_Record__c/listViews/All_Budget_Walk_Files.listView-meta.xml
<ListView>
    <fullName>All_Budget_Walk_Files</fullName>
    <columns>File_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>HD_Budget_Walk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HD_Budget_Walk__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All - Budget Walk Files</label>
</ListView>