Custom--app/main/default/objects/File_Storage_Record__c/listViews/Structured_FN_Errors.listView-meta.xml
<ListView>
    <fullName>Structured_FN_Errors</fullName>
    <columns>NAME</columns>
    <columns>SFN_Upload_Queued__c</columns>
    <columns>SFN_Upload_Last_Attempt__c</columns>
    <columns>SFN_Upload_Error_Message__c</columns>
    <columns>File_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>File_Size_kb__c</columns>
    <columns>Property__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFN_Upload_Queued__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SFN_Upload_Error_Message__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Property__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Structured FN Errors</label>
</ListView>