Custom--app/main/default/objects/File_Storage_Record__c/listViews/Structured_FN_Uploads_All_Successful.listView-meta.xml
<ListView>
    <fullName>Structured_FN_Uploads_All_Successful</fullName>
    <columns>Property__c</columns>
    <columns>File_Type__c</columns>
    <columns>File_Name__c</columns>
    <columns>File_Size_kb__c</columns>
    <columns>SFN_Upload_Queued__c</columns>
    <columns>SFN_Upload_Last_Attempt__c</columns>
    <columns>SFN_Upload_Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SFN_Upload_Queued__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SFN_Upload_Error_Message__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>SFN_Upload_Last_Attempt__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Structured FN Uploads - All Successful</label>
</ListView>