Custom--app/main/default/objects/File_Storage_Record__c/listViews/Uploaded_Today_Portfolio_Not_SFN.listView-meta.xml
<ListView>
    <fullName>Uploaded_Today_Portfolio_Not_SFN</fullName>
    <columns>File_Name__c</columns>
    <columns>Property__c</columns>
    <columns>NAME</columns>
    <columns>File_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Uploaded_To_S3_By__c</columns>
    <columns>Uploaded_To_S3_Date__c</columns>
    <columns>SFN_Upload_Queued__c</columns>
    <columns>Uploaded_To_SFN_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Property__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Uploaded_To_SFN_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>SFN_Upload_Queued__c</field>
        <operation>equals</operation>
    </filters>
    <label>Uploaded Today Portfolio Not SFN</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>